Adds worker specification to travis.yml
[#118770499]

Signed-off-by: Nino Khodabandeh <ninok@hpe.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 notifications:
   email:
   - cf-loggregator@pivotallabs.com
+
+sudo: required
+dist: precise
+group: legacy
 language: ruby
+
 rvm:
 - 2.0.0
 - 2.3.0
